Fix Java 17 bugs