@@ -228,10 +228,10 @@ public class AgentTest {
                     file.getFileName(), creationTime, modificationTime);
         }
 
-        var changeTimeFirstFile = Files.getLastModifiedTime(files.getFirst()).toMillis();
-        var changeTimeLastFile = Files.getLastModifiedTime(files.getLast()).toMillis();
-        var creationTimeFirstFile = Util.getCreationTimeOfFile(files.getFirst()).toMillis();
-        var creationTimeLastFile = Util.getCreationTimeOfFile(files.getLast()).toMillis();
+        var changeTimeFirstFile = Files.getLastModifiedTime(files.get(0)).toMillis();
+        var changeTimeLastFile = Files.getLastModifiedTime(files.get(files.size() - 1)).toMillis();
+        var creationTimeFirstFile = Util.getCreationTimeOfFile(files.get(0)).toMillis();
+        var creationTimeLastFile = Util.getCreationTimeOfFile(files.get(files.size() - 1)).toMillis();
         // check that the first file is newer than the last file
         // this is because the first file is overwritten last
         assertThat(changeTimeFirstFile)
